--- a/application/templates/auth/user.html
+++ b/application/templates/auth/user.html
@@ -9,15 +9,15 @@
             <br />
             {% if current_user.is_authenticated and user.name != current_user.name %}
             <div class="col-3">
-                    {% if current_user.check_following_status(user) %}
-                    <form method="POST" action="{{ url_for('unfollow', user_id=user.id)}}">
-                        <button type="submit" class="btn btn-secondary">Unfollow</a>
-                    </form>
-                    {% else %}
-                    <form method="POST" action="{{ url_for('follow', user_id=user.id)}}">
-                        <button type="submit" class="btn btn-primary">Follow</a>
-                    </form>
-                    {% endif %}
+                {% if current_user.check_following_status(user) %}
+                <form method="POST" action="{{ url_for('unfollow', user_id=user.id)}}">
+                    <button type="submit" class="btn btn-secondary">Unfollow</a>
+                </form>
+                {% else %}
+                <form method="POST" action="{{ url_for('follow', user_id=user.id)}}">
+                    <button type="submit" class="btn btn-primary">Follow</a>
+                </form>
+                {% endif %}
             </div>
             {% endif %}
             <br />
@@ -51,7 +51,8 @@
                                     <a class="badge badge-primary badge-pill"
                                         href="{{ url_for('post_specific', post_id=post.id)}}"><i
                                             data-feather="edit"></i></a>
-                                    <form method="POST" action="{{ url_for('post_delete', post_id=post.id,site='user')}}">        
+                                    <form method="POST"
+                                        action="{{ url_for('post_delete', post_id=post.id,site='user')}}">
                                         <button type="submit" class="badge badge-danger badge-pill"
                                             style="border:transparent !important">
                                             <i data-feather="trash-2"></i>
@@ -61,16 +62,51 @@
                                 </div>
                             </div>
                         </div>
-                        <a class="badge badge-primary badge-pill"
-                            href="{{ url_for('post_specific', post_id=post.id)}}"><i
-                                data-feather="message-square"></i>{{post.comments | length}}</a>
-                        <!-- mockup for like counter/like button-->
-                        <a class="badge badge-primary badge-pill" href="#"><i data-feather="thumbs-up"></i>15</a>
-                        <span class="badge badge-light badge-pill"><i data-feather="thumbs-up"></i>15</span>
+                        <div class="row">
+                            <div>
+                                <a class="badge badge-primary badge-pill"
+                                    href="{{ url_for('post_specific', post_id=post.id)}}"><i
+                                        data-feather="message-square"></i>{{post.comments | length}}</a>
+                            </div>
+                            <!--like button-->
+                            {% if current_user.is_authenticated %}
+                            {% if current_user.check_like_status(post) %}
+                            <div id="add{{post.id}}" style="display: none">
+                                <a class="badge badge-primary badge-pill" id="{{post.id}}/like"
+                                    onclick="like(this.id,{{post.id}})"><i data-feather="thumbs-up"></i><i
+                                        class="count{{post.id}}">{{post.liked.count()}}</i></a>
+                            </div>
+                            <div id="remove{{post.id}}">
+                                <a class="badge badge-success badge-pill" id="{{post.id}}/dislike"
+                                    onclick="dislike(this.id,{{post.id}})"><i data-feather="thumbs-up"></i><i
+                                        class="count{{post.id}}">{{post.liked.count()}}</i></a>
+                            </div>
+                            {% else %}
+                            <div id="add{{post.id}}">
+                                <a class="badge badge-primary badge-pill" id="{{post.id}}/like"
+                                    onclick="like(this.id,{{post.id}})"><i data-feather="thumbs-up"></i><i
+                                        class="count{{post.id}}">{{post.liked.count()}}</i></a>
+                            </div>
+                            <div id="remove{{post.id}}" style="display: none">
+                                <a class="badge badge-success badge-pill" id="{{post.id}}/dislike"
+                                    onclick="dislike(this.id,{{post.id}})"><i data-feather="thumbs-up"></i><i
+                                        class="count{{post.id}}">{{post.liked.count()}}</i></a>
+                            </div>
+                            {% endif %}
+
+                            {% else %}
+                            <div">
+                                <a class="badge badge-light badge-pill"><i
+                                        data-feather="thumbs-up"></i><i>{{post.liked.count()}}</i></a>
+                        </div>
+                        {% endif %}
+
+
                         <br />
                         <br />
                         <hr />
                     </div>
+
                 </li>
                 {% endfor %}
             </ul>
