--- a/application/templates/posts/list.html
+++ b/application/templates/posts/list.html
@@ -49,7 +49,7 @@
                             {% if current_user.name == post.account.name %}
                             <a class="badge badge-primary badge-pill"
                                 href="{{ url_for('post_specific', post_id=post.id)}}"><i data-feather="edit"></i></a>
-                            <form method="POST" action="{{ url_for('post_delete', post_id=post.id, site='list')}}">                               
+                            <form method="POST" action="{{ url_for('post_delete', post_id=post.id, site='list')}}">
                                 <button type="submit" class="badge badge-danger badge-pill"
                                     style="border:transparent !important">
                                     <i data-feather="trash-2"></i>
@@ -59,15 +59,50 @@
                         </div>
                     </div>
                 </div>
-                <a class="badge badge-primary badge-pill" href="{{ url_for('post_specific', post_id=post.id)}}"><i
-                        data-feather="message-square"></i>{{post.comments | length}}</a>
-                <!-- mockup for like counter/like button-->
-                <a class="badge badge-primary badge-pill" href="#"><i data-feather="thumbs-up"></i>15</a>
-                <span class="badge badge-light badge-pill"><i data-feather="thumbs-up"></i>15</span>
-                <br />
-                <br />
-                <hr />
+                <div class="row">
+                    <div>
+                        <a class="badge badge-primary badge-pill"
+                            href="{{ url_for('post_specific', post_id=post.id)}}"><i
+                                data-feather="message-square"></i>{{post.comments | length}}</a>
+                    </div>
+                    <!-- like counter/like button-->
+                    {% if current_user.is_authenticated %}
+                    {% if current_user.check_like_status(post) %}
+                    <div id="add{{post.id}}" style="display: none">
+                        <a class="badge badge-primary badge-pill" id="{{post.id}}/like"
+                            onclick="like(this.id,{{post.id}})"><i data-feather="thumbs-up"></i><i
+                                class="count{{post.id}}">{{post.liked.count()}}</i></a>
+                    </div>
+                    <div id="remove{{post.id}}">
+                        <a class="badge badge-success badge-pill" id="{{post.id}}/dislike"
+                            onclick="dislike(this.id,{{post.id}})"><i data-feather="thumbs-up"></i><i
+                                class="count{{post.id}}">{{post.liked.count()}}</i></a>
+                    </div>
+                    {% else %}
+                    <div id="add{{post.id}}">
+                        <a class="badge badge-primary badge-pill" id="{{post.id}}/like"
+                            onclick="like(this.id,{{post.id}})"><i data-feather="thumbs-up"></i><i
+                                class="count{{post.id}}">{{post.liked.count()}}</i></a>
+                    </div>
+                    <div id="remove{{post.id}}" style="display: none">
+                        <a class="badge badge-success badge-pill" id="{{post.id}}/dislike"
+                            onclick="dislike(this.id,{{post.id}})"><i data-feather="thumbs-up"></i><i
+                                class="count{{post.id}}">{{post.liked.count()}}</i></a>
+                    </div>
+                    {% endif %}
+
+                    {% else %}
+                    <div">
+                        <a class="badge badge-light badge-pill"><i
+                                data-feather="thumbs-up"></i><i>{{post.liked.count()}}</i></a>
+                </div>
             </div>
+            {% endif %}
+
+            <br />
+            <br />
+            <hr />
+
 
         </li>
         {% endfor %}
