--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -7,7 +7,7 @@
       <h1 class="display-3">Foorumi</h1>
       <p class="lead">Tsoha projekti</p>
       <hr class="my-2">
-      <p>Eli "twittermäinen" foorumiprojekti joka on vielä pahasti kesken.</p>
+      <p>Eli "twittermäinen" foorumiprojekti.</p>
       <p class="lead">
         <a class="btn btn-primary btn-lg" href="{{ url_for('posts_index') }}" role="button">Start browsing posts</a>
       </p>
